// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast component should match snapshot 1`] = `
<div>
  <div
    class="css-wwl213"
    style="height: 0px;"
  >
    <i
      class="material-icons css-148htax-Icon"
    >
      check_circle
    </i>
    <div
      class="css-d3ud5j"
    >
      test
    </div>
    <div
      class="css-1o9fee3"
    >
      test
    </div>
    <i
      class="material-icons css-b6hqi9-Icon"
    >
      close
    </i>
  </div>
</div>
`;

exports[`Toast component should match snapshot when information 1`] = `
<div>
  <div
    class="css-1f0v0hv"
    style="height: 0px;"
  >
    <i
      class="material-icons css-150jhr4-Icon"
    >
      info
    </i>
    <div
      class="css-klbf7x"
    >
      test
    </div>
    <div
      class="css-1o9fee3"
    >
      test
    </div>
    <i
      class="material-icons css-b6hqi9-Icon"
    >
      close
    </i>
  </div>
</div>
`;
